# controller/client.js
@@ -1,81 +1,125 @@
 import db from '../config/db/mysql'
 import {redis} from '../config/db/redis'
+import { handleFormatTimestamp, handleFormatDateTime } from '../function/index'
+
+const handleFormatSystemMessage = (smessage) => {
+  const dataSplit = smessage.split(';')
+  const questionId = dataSplit[1]
+  let question_content= []
+  question_content = questionId === 1 || questionId === 2 ? dataSplit[3].split(',') : dataSplit[3]
+  const messageObj = {
+    status: 0,
+    question_id: +dataSplit[1],
+    question: dataSplit[2],
+    question_content: question_content,
+    created_time: dataSplit[4],
+    answer: dataSplit[5],
+    timeStampDate: handleFormatTimestamp(dataSplit[4])
+  }
+  return messageObj
+}
+
+const handleGetOfflineSmessage = async(redisDB, client_id, group_name, website_name) => {
+  console.log('testtt', redisDB, client_id, group_name, website_name)
+  const offlineSmessageList = await redisDB.lRange(`smessage-${client_id}-0`, 0, -1)
+  console.log('offlineSmessageList', offlineSmessageList)
+  if(offlineSmessageList.length){
+    let offlineChatList = []
+    for(let smessage of offlineSmessageList) {
+      const offlineMessage = handleFormatSystemMessage(smessage)
+      offlineChatList.push(offlineMessage)
+    }
+    return {
+      room_id: 0,
+      group: group_name,
+      website: website_name,
+      cs_name: "",
+      cs_uuid: "",
+      is_read_id: 0,
+      begin_time: "",
+      end_time: "",
+      chatList: offlineChatList
+    }
+  }
+  return null
+}
 exports.handleGetAllMessage = async (req, res, next) => {
-  const { client_id } = req.params
-  console.log('client_id', typeof(client_id), client_id)
+  const { client_id, resource_id } = req.query
+  console.log('client_id', client_id, resource_id)
+  // 取得網站來源的網站名稱及group名稱
+  const getResourceInfoSyntax = `SELECT w.website_name, b.name as group_name FROM web_resource w left join business_group b on w.group_id = b.id where w.id=${resource_id}`;
+  const getResourceInfo = await db.execute(getResourceInfoSyntax).then(res => res[0])
+  const {website_name, group_name} = getResourceInfo[0]
   // 取得該會員所有房間
-  const RoomSyntax = `SELECT r.id as room_id, b.name as group_name, w.website_name, a.name as cs_name, r.end_time FROM room r left join administrator_user a on r.administrator = a.id left join client_user c on r.client = c.id left join web_resource w on c.web_resource = w.id left join business_group b on w.group_id = b.id where r.client=${client_id} order by r.begin_time;`
+  const RoomSyntax = `SELECT a.uuid as cs_uuid, r.id as room_id, b.name as group_name, w.website_name, a.name as cs_name, r.begin_time ,r.end_time FROM room r left join administrator_user a on r.administrator = a.id left join client_user c on r.client = c.id left join web_resource w on r.resource_id = w.id left join business_group b on w.group_id = b.id where r.client=${client_id} order by r.begin_time;`
   // 檢查rooms的client有沒有自己
   const roomList = await db.execute(RoomSyntax).then(res => res[0])
   console.log('roomList', roomList)
- 
-  // getChatList()
-  if(roomList.length){
-     // const result = await db.set('key3', 'dadada')
   const redisDB = await redis()
+  
+  // getChatList()
+  let data = []
+  const offlineRoom = await handleGetOfflineSmessage(redisDB, client_id, group_name, website_name)
+  
   // 取得目前已讀狀況
   const readState = await redisDB.get(`message-${client_id}-read`)
-  const clientreadId = readState.split(';')[1].split('-')[1]
+  const clientreadId = readState !== null ? readState.split(';')[1].split('-')[1] :0
   console.log('readState', readState)
-  let data = []
-  const handleFormatTimestamp = (time) => {
-    return Math.floor(new Date(time) / 1000);
-  }
-  // 對每個房間跑迴圈
-  for(let item of roomList){
-    let roomObj = {
-      roomId: item.room_id,
-      group: item.group_name,
-      website: item.website_name,
-      csName: item.cs_name,
-      isReadId: +clientreadId,
-      end_time: item.end_time === null ? '' : item.end_time
-    }
-    // 取出該房間的聊天訊息
-    let messageList = await redisDB.lRange(`message-${item.room_id}`, 0, -1)
-    let smessageList = await redisDB.lRange(`smessage-${item.room_id}`, 0, -1)
-    
-    let chatList = []
-    let sChatList = []
-    for(let message of messageList) {
-      const dataSplit = message.split(';')
-      const identity = dataSplit[1].split('-')[0]
-      const messageObj = {
-        status: identity === 'cs' ? 1 : 2,
-        msgId: +dataSplit[0],
-        name: dataSplit[2],
-        msg: dataSplit[3],
-        created_time: dataSplit[4],
-        timeStampDate: handleFormatTimestamp(dataSplit[4])
+  if((roomList.length || (offlineRoom !== null && offlineRoom.chatList.length))){
+    // 對每個房間跑迴圈(roomId非0才會跑這，)
+    for(let item of roomList){
+      let roomObj = {
+        room_id: item.room_id,
+        group: item.group_name,
+        website: item.website_name,
+        cs_name: item.cs_name,
+        cs_uuid: item.cs_uuid,
+        is_read_id: +clientreadId,
+        begin_time: item.begin_time === null ? '' : handleFormatDateTime(item.begin_time.toISOString()),
+        end_time: item.end_time === null ? '' : handleFormatDateTime(item.end_time.toISOString())
       }
-      chatList.push(messageObj)
-    }
-
-    for(let smessage of smessageList) {
-      const dataSplit = smessage.split(';')
-      const questionId = dataSplit[1]
-      let question_content= []
-      question_content = questionId === 1 || questionId === 2 ? dataSplit[3].split(',') : dataSplit[3]
-      const messageObj = {
-        status: 0,
-        question_id: +dataSplit[1],
-        question: dataSplit[2],
-        question_content: question_content,
-        created_time: dataSplit[4],
-        answer: dataSplit[5],
-        timeStampDate: handleFormatTimestamp(dataSplit[4])
+      // 取出該房間的聊天訊息
+      let messageList = await redisDB.lRange(`message-${item.room_id}`, 0, -1)
+      let smessageList = await redisDB.lRange(`smessage-${item.room_id}`, 0, -1)
+      
+      let chatList = []
+      let sChatList = []
+      // room裡的人員訊息
+      for(let message of messageList) {
+        const dataSplit = message.split(';')
+        const identity = dataSplit[1].split('-')[0]
+        const messageObj = {
+          status: identity === 'cs' ? 1 : 2,
+          msg_id: +dataSplit[0],
+          name: dataSplit[2],
+          msg: dataSplit[3],
+          created_time: dataSplit[4],
+          timeStampDate: handleFormatTimestamp(dataSplit[4])
+        }
+        chatList.push(messageObj)
       }
-      sChatList.push(messageObj)
+      // room裡的系統訊息
+      for(let smessage of smessageList) {
+        const messageObj = handleFormatSystemMessage(smessage)
+        sChatList.push(messageObj)
+      }
+      const combineChatList = chatList.concat(sChatList).sort((a, b) => a.timeStampDate - b.timeStampDate)
+      roomObj['chatList'] = combineChatList
+      // data目前放的是完整的有開始及結束的聊天訊息
+      data.push(roomObj)
     }
-    const combineChatList = chatList.concat(sChatList).sort((a, b) => a.timeStampDate - b.timeStampDate)
-    roomObj['chatList'] = combineChatList
-    data.push(roomObj)
-  }
-    // roomList
+      // 有可能目前使用者有未配對系統聊天訊息(最新)，等完整的push完再push未配對訊息
+    console.log('offlineRoom', offlineRoom)
+    if(offlineRoom !== null && offlineRoom.chatList.length){
+      data.push(offlineRoom)
+    }
+    console.log('offlineMessageList', offlineRoom)
     res.status(200).send(data)
-    await redisDB.disconnect()
-    return
-  }else{
-    return res.status(204).send()
   }
+  // 如果沒有roomList也沒有未配對系統訊息
+  if(!roomList.length && offlineRoom === null){
+    res.status(204).send()
+  }
+  await redisDB.disconnect()
+  return
 }
